Closed
Bug 398057
Opened 17 years ago
Closed 17 years ago
X Window error or crash on shutdown (with GTK < 2.10)
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta1
People
(Reporter: smontagu, Assigned: karlt)
References
Details
Attachments
(1 file, 1 obsolete file)
3.03 KB,
patch
|
roc
:
review+
benjamin
:
review+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
In builds from the last couple of days, the first run always crashes with the following stack:
#6 0xb768fd77 in XFreeGC () from /usr/lib/libX11.so.6
#7 0xb7897cbe in _gdk_gc_x11_get_type () from /usr/lib/libgdk-x11-2.0.so.0
#8 0xb7645f48 in g_object_unref () from /usr/lib/libgobject-2.0.so.0
#9 0xb7880237 in gdk_screen_get_type () from /usr/lib/libgdk-x11-2.0.so.0
#10 0xb78a1169 in gdk_screen_set_default_colormap ()
from /usr/lib/libgdk-x11-2.0.so.0
#11 0xb76469f4 in g_object_run_dispose () from /usr/lib/libgobject-2.0.so.0
#12 0xb7880312 in _gdk_screen_close () from /usr/lib/libgdk-x11-2.0.so.0
#13 0xb788a7cf in gdk_x11_display_ungrab () from /usr/lib/libgdk-x11-2.0.so.0
#14 0xb76469f4 in g_object_run_dispose () from /usr/lib/libgobject-2.0.so.0
#15 0xb786c0bb in gdk_display_close () from /usr/lib/libgdk-x11-2.0.so.0
#16 0xb7d6fe41 in XRE_main (argc=4, argv=0xbfeff494, aAppData=0x804c9a0)
at /home/smontagu/mozwork/debugtree/mozilla/toolkit/xre/nsAppRunner.cpp:3217#17
0x08048b0a in main (argc=4, argv=0xbfeff494)
at /home/smontagu/mozwork/debugtree/mozilla/suite/app/nsSuiteApp.cpp:99
Subsequent runs either crash on shutdown with the same stack (except that frame 16 is at line 3233), or issue this error message:
The program 'Gecko' received an X Window System error.
This probably reflects a bug in the program.
The error was 'BadAtom (invalid Atom parameter)'.
(Details: serial 9474 error_code 5 request_code 18 minor_code 0)
(Note to programmers: normally, X errors are reported asynchronously;
that is, you will receive the error a while after causing it.
To debug your program, run it with the --sync command line
option to change this behavior. You can then get a meaningful
backtrace from your debugger if you break on the gdk_x_error() function.)
Reverting bug 394466 makes the problem go away.
I have gtk 2.8.20
Comment 1•17 years ago
|
||
I've replicated this with FF, SM and TB builds on gtk 2.8.3. Either crashes on shutdown or restart.
Therefore requesting blocking 1.9.
Flags: blocking1.9?
Comment 2•17 years ago
|
||
gdk_display_close doesn't work on gtk < 2.10. [http://bugzilla.gnome.org/show_bug.cgi?id=85715]
Comment 3•17 years ago
|
||
(In reply to comment #2)
> gdk_display_close doesn't work on gtk < 2.10.
> [http://bugzilla.gnome.org/show_bug.cgi?id=85715]
>
Interesting. A change to 2.10 for the runtime requirements has been *proposed* in http://wiki.mozilla.org/Linux/Runtime_Requirements (it is currently 2.0+), but no responses to the discussion page/follow up announcements confirming the proposals either way have been made AFAIK.
Comment 4•17 years ago
|
||
(In reply to comment #3)
> Interesting. A change to 2.10 for the runtime requirements has been *proposed*
> in http://wiki.mozilla.org/Linux/Runtime_Requirements (it is currently 2.0+),
> but no responses to the discussion page/follow up announcements confirming the
> proposals either way have been made AFAIK.
I should have said, I'm not against the requirements being upped. I am against upping the requirements without telling anyone beforehand (a proposal is just a proposal).
Updated•17 years ago
|
Summary: X Window error or crash on shutdown → X Window error or crash on shutdown (with GTK < 2.10)
Assignee | ||
Comment 5•17 years ago
|
||
(In reply to comment #2)
> gdk_display_close doesn't work on gtk < 2.10.
> [http://bugzilla.gnome.org/show_bug.cgi?id=85715]
Thanks, Christian. I wasn't aware of that.
(In reply to comment #4)
> I should have said, I'm not against the requirements being upped. I am against
> upping the requirements without telling anyone beforehand (a proposal is just
> a proposal).
>
http://groups.google.com/group/mozilla.dev.planning/tree/browse_frm/month/2007-06/03e8e62d0140f8ab?rnum=151&_done=%2Fgroup%2Fmozilla.dev.planning%2Fbrowse_frm%2Fmonth%2F2007-06%3F#doc_b243528a69d69d2a
(from June) does say "the current set, which we expect to adopt fairly soon."
Not clear, no, but not a complete secret either.
Assignee | ||
Comment 6•17 years ago
|
||
A build-time work-around.
I still want the display closed for bug 246313.
Assignee: nobody → mozbugz
Status: NEW → ASSIGNED
Assignee | ||
Updated•17 years ago
|
Attachment #282943 -
Flags: review?(roc)
Attachment #282943 -
Flags: review?(benjamin)
Assignee | ||
Comment 7•17 years ago
|
||
The runtime check is pretty simple so let's do that.
Attachment #282943 -
Attachment is obsolete: true
Attachment #282951 -
Flags: review?(roc)
Attachment #282951 -
Flags: review?(benjamin)
Attachment #282943 -
Flags: review?(roc)
Attachment #282943 -
Flags: review?(benjamin)
Attachment #282951 -
Flags: review?(roc) → review+
Updated•17 years ago
|
Attachment #282951 -
Flags: review?(benjamin) → review+
Assignee | ||
Updated•17 years ago
|
Attachment #282951 -
Flags: approval1.9?
Comment 8•17 years ago
|
||
I see the same problem with GTK 2.12.0, but I see you're checking for 2.10 in the patch so I may see this working after the patch as well.
For crash reports from my system, see bp-18a7ad5c-70f1-11dc-8093-001a4bd43ed6 bp-47679859-70f1-11dc-a8eb-001a4bd43e5c bp-7ef7af9e-70f1-11dc-97f9-001a4bd43ef6 and bp-b37c501c-70f1-11dc-bc80-001a4bd43ed6 - those happened either on startup (after profile selection) when I tried launching the builds from konqueror or on shutdown when I had started the build from a console window.
Comment 9•17 years ago
|
||
Karl requested a stack for my debug build, I'm posting it here inline because it's that short:
#5 <signal handler called>
#6 0xb3401840 in ?? ()
#7 0xb77cab2a in g_cclosure_marshal_VOID__BOOLEAN () from /usr/lib/libgobject-2.0.so.0
#8 0xb77bd919 in g_closure_invoke () from /usr/lib/libgobject-2.0.so.0
#9 0xb77d09ed in ?? () from /usr/lib/libgobject-2.0.so.0
#10 0x08461fe8 in ?? ()
#11 0x00000000 in ?? ()
Attachment #282951 -
Flags: approval1.9? → approval1.9+
Comment 10•17 years ago
|
||
Checking in toolkit/xre/nsAppRunner.cpp;
/cvsroot/mozilla/toolkit/xre/nsAppRunner.cpp,v <-- nsAppRunner.cpp
new revision: 1.195; previous revision: 1.194
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M9
Version: unspecified → Trunk
Assignee | ||
Comment 11•17 years ago
|
||
(In reply to comment #9)
Filed bug 398512 on that.
Comment 12•17 years ago
|
||
Bug appears fixed for me so removing the blocking request flag.
Flags: blocking1.9?
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
You need to log in
before you can comment on or make changes to this bug.
Description
•