Bug 398057 - "X Window error or crash on shutdown (with GTK < 2.10)" (don't gdk_display_close when broken at run time but still XCloseDisplay) [p=karlt r=bsmedberg r+a1.9=roc]